@@ -3,6 +3,11 @@ What's New in IDLE 2.6a1?
 
 *Release date: XX-XXX-200X*
 
+- Corrected some bugs in AutoComplete.  Also, Page Up/Down in ACW implemented;
+  mouse and cursor selection in ACWindow implemented; double Tab inserts
+  current selection and closes ACW (similar to double-click and Return); scroll
+  wheel now works in ACW.  Added AutoComplete instructions to IDLE Help.
+
 - AutoCompleteWindow moved below input line, will move above if there
   isn't enough space.  Patch 1621265 Tal Einat
 
